--- a/team.html
+++ b/team.html
@@ -72,7 +72,7 @@
 				<img src="assets/images/headshots/ansh_aggarwal.jpg" alt="Ansh Aggarwal" class="member-img" />
 				<div class="member-name">Ansh Aggarwal</div>
 				<div class="member-role">Structures Lead</div>
-				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;"></p>
+				<p style="color:var(--subtxt);font-size:0.98rem;margin-bottom:0.7rem;">As the Structures Lead, I oversee the creation and development of most immobile mechanical structures present in the car, involving structures such as the chassis, doors, and battery enclosures. I am a sophomore in chemical engineering and paper science engineering, and this is my 2nd year on SolarPack. I joined SolarPack as it reminded me of FRC, a robotics competition I invested lots of time and effort in in high school. Some of my hobbies include woodworking, reading, and playing videogames.</p>
 			</div>
 			<div class="member-card">
 				<img src="assets/images/headshots/aaron_wold.jpg" alt="Aaron Wold" class="member-img" />
