--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
     .hero-content .subtitle{font-size:1.2rem;color:var(--subtxt);margin-bottom:1.2rem}
     .hero-content p{color:var(--subtxt);font-size:1.05rem}
 
+  /* Donate button */
+  .donate-btn{display:inline-flex;align-items:center;gap:.55rem;margin:.4rem 0 1rem;padding:.65rem 1rem;background:var(--accent);color:#fff;text-decoration:none;border-radius:999px;font-weight:600;box-shadow:0 4px 12px #0006;transition:transform .05s ease, box-shadow .2s ease, background .2s}
+  .donate-btn:hover{background:#ff4a45;box-shadow:0 6px 18px #0008}
+  .donate-btn:active{transform:translateY(1px)}
+  .donate-btn i{font-size:1.1rem}
+
     .section{background:var(--card);border-radius:var(--radius);padding:2rem;margin-bottom:3rem;box-shadow:0 1px 6px #0004}
     .section img{width:100%;border-radius:var(--radius);box-shadow:0 2px 16px #0005;margin-bottom:1.5rem;background:#222}
     .section h2{text-align:center;margin-bottom:1rem}
@@ -126,6 +132,10 @@
       <div class="hero-content">
         <h1>SolarPack</h1>
         <div class="subtitle">Solar Vehicle Team at NC State</div>
+        <a class="donate-btn" href="https://www.paypal.com/fundraiser/charity/3728956" target="_blank" rel="noopener" aria-label="Donate to SolarPack via PayPal">
+          <i class="fab fa-paypal" aria-hidden="true"></i>
+          Donate
+        </a>
         <p>Striving to break barriers in the sustainable vehicle industry with a hardworking group of over 80 passionate students. Join us in our journey to a more sustainable future for transportation.</p>
       </div>
     </section>
