--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .hero-content p{color:var(--subtxt);font-size:1.05rem}
 
   /* Donate button */
-  .donate-btn{display:inline-flex;align-items:center;gap:.55rem;margin:.4rem 0 1rem;padding:.65rem 1rem;background:var(--accent);color:#fff;text-decoration:none;border-radius:999px;font-weight:600;box-shadow:0 4px 12px #0006;transition:transform .05s ease, box-shadow .2s ease, background .2s}
+  .donate-btn{display:inline-flex;align-items:center;gap:.55rem;margin:1rem 0 1rem;padding:.65rem 1rem;background:var(--accent);color:#fff;text-decoration:none;border-radius:999px;font-weight:600;box-shadow:0 4px 12px #0006;transition:transform .05s ease, box-shadow .2s ease, background .2s}
   .donate-btn:hover{background:#ff4a45;box-shadow:0 6px 18px #0008}
   .donate-btn:active{transform:translateY(1px)}
   .donate-btn i{font-size:1.1rem}
