--- a/sponsorship.html
+++ b/sponsorship.html
@@ -14,7 +14,7 @@
     .tier{margin-bottom:2.5rem;}
     .tier h2{font-family:'Bebas Neue',sans-serif;font-size:2rem;color:#e53935;text-align:left;margin-bottom:1rem;}
     .sponsor-logos{display:flex;flex-wrap:wrap;gap:2rem;justify-content:left;align-items:center;}
-    .sponsor-logos img{background:#222;border-radius:10px;box-shadow:0 2px 12px #0005;padding:1rem;max-width:180px;max-height:100px;object-fit:contain;}
+  .sponsor-logos img{background:#222;border-radius:10px;box-shadow:0 2px 12px #0005;padding:1.5rem;max-width:320px;max-height:180px;object-fit:contain;}
     .placeholder{color:#888;font-size:1.1rem;padding:2rem 0;}
   </style>
 </head>
@@ -48,7 +48,14 @@
         <span class="placeholder">No bronze sponsors yet.</span>
       </div>
     </section>
-    <p style="text-align:center;color:#cecece;margin-top:3rem;">Interested in sponsoring Fenrir? <a href="contact.html" style="color:#e53935;text-decoration:underline;">Contact us</a> for more info!</p>
+    <div style="text-align:center;margin-top:3rem;">
+      <a class="donate-btn" href="https://www.paypal.com/fundraiser/charity/3728956" target="_blank" rel="noopener" aria-label="Donate to SolarPack via PayPal" style="display:inline-flex;align-items:center;gap:.55rem;margin-bottom:1.2rem;padding:.65rem 1rem;background:#e53935;color:#fff;text-decoration:none;border-radius:999px;font-weight:600;box-shadow:0 4px 12px #0006;transition:transform .05s ease, box-shadow .2s ease, background .2s">
+        <i class="fab fa-paypal" aria-hidden="true"></i>
+        Donate
+      </a>
+      <br>
+      <span style="color:#cecece;">Interested in sponsoring Fenrir? <a href="contact.html" style="color:#e53935;text-decoration:underline;">Contact us</a> for more info!</span>
+    </div>
   </main>
 </body>
 </html>
