Add favicon to all pages and remove sponsors.html
Added a favicon link to all HTML pages for consistent branding. Updated the privacy policy page title. Removed the obsolete sponsors.html file.

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>SolarPack · Privacy & Data</title>
+	<title>SolarPack · Privacy Policy</title>
+	<link rel="icon" type="image/png" href="assets/images/solarpack_logo.png" />
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
