--- a/sponsorship.html
+++ b/sponsorship.html
@@ -49,14 +49,9 @@
         <span class="placeholder">No bronze sponsors yet.</span>
       </div>
     </section>
-    <div style="text-align:center;margin-top:3rem;">
-      <a class="donate-btn" href="https://www.paypal.com/fundraiser/charity/3728956" target="_blank" rel="noopener" aria-label="Donate to SolarPack via PayPal" style="display:inline-flex;align-items:center;gap:.55rem;margin-bottom:1.2rem;padding:.65rem 1rem;background:#e53935;color:#fff;text-decoration:none;border-radius:999px;font-weight:600;box-shadow:0 4px 12px #0006;transition:transform .05s ease, box-shadow .2s ease, background .2s">
-        <i class="fab fa-paypal" aria-hidden="true"></i>
-        Donate
-      </a>
-      <br>
-      <span style="color:#cecece;">Interested in sponsoring Fenrir? <a href="contact.html" style="color:#e53935;text-decoration:underline;">Contact us</a> for more info!</span>
-    </div>
+    <p style="text-align:center;color:#cecece;margin-top:3rem;">
+      Interested in sponsoring Fenrir or supporting our team? <a href="https://www.paypal.com/fundraiser/charity/3728956" target="_blank" rel="noopener" style="color:#e53935;text-decoration:underline;">Donate</a> or <a href="contact.html" style="color:#e53935;text-decoration:underline;">Contact us</a> for more info!
+    </p>
   </main>
 </body>
 </html>
