--- a/sponsorship.html
+++ b/sponsorship.html
@@ -25,14 +25,14 @@
     <section class="tier">
       <h2>Platinum Sponsors</h2>
       <div class="sponsor-logos">
-        <img src="assets/images/sponsors/image.png" alt="Parker Lord" title="Parker Lord" />
+        <img src="assets/images/sponsors/image (1).png" alt="Parker Lord" title="Parker Lord" />
       </div>
     </section>
     <section class="tier">
       <h2>Gold Sponsors</h2>
       <div class="sponsor-logos">
         <img src="assets/images/sponsors/ec logo.png" alt="ECouncil" title="ECouncil" />
-        <img src="assets/images/sponsors/image (1).png" alt="Gold Sponsor" title="Gold Sponsor" />
+        <img src="assets/images/sponsors/image.png" alt="Gold Sponsor" title="Gold Sponsor" />
         <img src="assets/images/sponsors/mae logo.png" alt="MAE" title="MAE" />
         <img src="assets/images/sponsors/stu council logo (1).png" alt="StuGov" title="StuGov" />
       </div>
