Update build assets and data files
Regenerated JavaScript and CSS assets, updated site manifest, and modified data files for orders, alumni, and sponsors. Also updated images and HTML files to reflect new assets and data.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/images/solarpack_logo.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/solarpack_logo.png" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/images/solarpack_logo.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/solarpack_logo.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="theme-color" content="#0a0a0a" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SolarPack</title>
     
